<?xml version="1.0"?>
<package format="2">
  <name>roschaos</name>
  <version>0.0.0</version>
  <description>
    roschaos contains the roschaos command-line tool for auditing and testing
    security vulnerabilities in ROS, or simply wreak chaos upon your ROS system.
  </description>
  <maintainer email="roxfoxpox@gmail.com">Ruffin White</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/roschaos</url>
  <author email="roxfoxpox@gmail.com">Ruffin White</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostopic</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
